# app-askllm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HLE_ACCESS.md  MANUAL.md  README.md  README_STREAMLIT_CLOUD.md  REQUIREMENT.md  TODO.md  app_analysis.py  app_analysis_lite.py  app_analysis_safe.py  app_cloud.py  docker-compose.yml  i18n_cloud.py  pyproject.toml  requirements.txt  requirements_lite.txt
.devcontainer/: devcontainer.json
.github/workflows/: update-todo.yml
.streamlit/: config.toml
configs/: default.yaml  secrets.example.yaml
scripts/: docker_build.sh  docker_run.sh  download_datasets.py  update_todo.py
src/hle_screener/: __init__.py  app_streamlit.py  askllm.py  cli.py  distributed.py  embed.py  embedding_cache.py  i18n.py  index.py  io.py  quantization.py  schema.py  score.py  utils.py  viz_umap.py
src/hle_screener_old/: __init__.py
tests/: test_askllm.py  test_index.py  test_pipeline_e2e.py  test_streamlit_apps.py
